--- a/index.ipynb
+++ b/index.ipynb
@@ -33,10 +33,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import nltk\n",
+    "from nltk.corpus import gutenberg, stopwords\n",
+    "from nltk.collocations import *\n",
+    "from nltk import FreqDist, word_tokenize\n",
+    "import string\n",
+    "import re"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -49,11 +56,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package gutenberg to /home/stupendous-\n",
+      "[nltk_data]     inspector-1822/nltk_data...\n",
+      "[nltk_data]   Unzipping corpora/gutenberg.zip.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "file_ids = None"
+    "nltk.download('gutenberg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['austen-emma.txt',\n",
+       " 'austen-persuasion.txt',\n",
+       " 'austen-sense.txt',\n",
+       " 'bible-kjv.txt',\n",
+       " 'blake-poems.txt',\n",
+       " 'bryant-stories.txt',\n",
+       " 'burgess-busterbrown.txt',\n",
+       " 'carroll-alice.txt',\n",
+       " 'chesterton-ball.txt',\n",
+       " 'chesterton-brown.txt',\n",
+       " 'chesterton-thursday.txt',\n",
+       " 'edgeworth-parents.txt',\n",
+       " 'melville-moby_dick.txt',\n",
+       " 'milton-paradise.txt',\n",
+       " 'shakespeare-caesar.txt',\n",
+       " 'shakespeare-hamlet.txt',\n",
+       " 'shakespeare-macbeth.txt',\n",
+       " 'whitman-leaves.txt']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file_ids = gutenberg.fileids()\n",
+    "file_ids"
    ]
   },
   {
@@ -69,11 +136,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[The Tragedie of Macbeth by William Shakespeare 1603]\n",
+      "\n",
+      "\n",
+      "Actus Primus. Scoena Prima.\n",
+      "\n",
+      "Thunder and Lightning. Enter three Witches.\n",
+      "\n",
+      "  1. When shall we three meet againe?\n",
+      "In Thunder, Lightning, or in Raine?\n",
+      "  2. When the Hurley-burley's done,\n",
+      "When the Battaile's lost, and wonne\n",
+      "\n",
+      "   3. That will be ere the set of Sunne\n",
+      "\n",
+      "   1. Where the place?\n",
+      "  2. Vpon the Heath\n",
+      "\n",
+      "   3. There to meet with Macbeth\n",
+      "\n",
+      "   1. I come, Gray-Malkin\n",
+      "\n",
+      "   All. Padock calls anon: faire is foule, and foule is faire,\n",
+      "Houer through the fogge and filthie ayre.\n",
+      "\n",
+      "Exeunt.\n",
+      "\n",
+      "\n",
+      "Scena Secunda.\n",
+      "\n",
+      "Alarum within. Enter King Malcome, Donalbaine, Lenox, with\n",
+      "attendants,\n",
+      "meeting a bleeding Captaine.\n",
+      "\n",
+      "  King. What bloody man is that? he can report,\n",
+      "As seemeth by his plight, of the Reuolt\n",
+      "The newest state\n",
+      "\n",
+      "   Mal. This is the Serieant,\n",
+      "Who like a good and hardie Souldier fought\n",
+      "'Gainst my Captiuitie: Haile braue friend;\n",
+      "Say to the King, the k\n"
+     ]
+    }
+   ],
    "source": [
-    "macbeth_text = None"
+    "macbeth_text = gutenberg.raw('shakespeare-macbeth.txt')\n",
+    "print(macbeth_text[:900])"
    ]
   },
   {
@@ -83,8 +199,7 @@
     "**_Question:_**  Look at the text snippet above. What do you notice about it? Are there are issues you see that we'll need to deal with during the preprocessing steps?\n",
     "\n",
     "Write your answer below this line:\n",
-    "_______________________________________________________________________________\n",
-    "\n",
+    "hyphens need to be dealt with\n",
     "\n",
     "### Preprocessing the Data\n",
     "\n",
@@ -102,12 +217,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to /home/stupendous-\n",
+      "[nltk_data]     inspector-1822/nltk_data...\n",
+      "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "pattern = None\n",
-    "macbeth_tokens_raw = None"
+    "nltk.download('punkt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['[', 'The', 'Tragedie', 'of', 'Macbeth', 'by', 'William', 'Shakespeare', '1603', ']', 'Actus', 'Primus', '.', 'Scoena', 'Prima', '.', 'Thunder', 'and', 'Lightning', '.', 'Enter', 'three', 'Witches', '.', '1', '.', 'When', 'shall', 'we', 'three', 'meet', 'againe', '?', 'In', 'Thunder', ',', 'Lightning', ',', 'or', 'in', 'Raine', '?', '2', '.', 'When', 'the', 'Hurley-burley', \"'s\", 'done', ',', 'When', 'the', 'Battaile', \"'s\", 'lost', ',', 'and', 'wonne', '3', '.', 'That', 'will', 'be', 'ere', 'the', 'set', 'of', 'Sunne', '1', '.', 'Where', 'the', 'place', '?', '2', '.', 'Vpon', 'the', 'Heath', '3', '.', 'There', 'to', 'meet', 'with', 'Macbeth', '1', '.', 'I', 'come', ',', 'Gray-Malkin', 'All', '.', 'Padock', 'calls', 'anon', ':', 'faire', 'is']\n"
+     ]
+    }
+   ],
+   "source": [
+    "pattern = \"([a-zA-Z]+(?:'[a-z]+)?)\"\n",
+    "macbeth_tokens_raw = word_tokenize(macbeth_text)\n",
+    "print(macbeth_tokens_raw[:100])"
    ]
   },
   {
@@ -119,11 +272,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['[', 'the', 'tragedie', 'of', 'macbeth', 'by', 'william', 'shakespeare', '1603', ']', 'actus', 'primus', '.', 'scoena', 'prima', '.', 'thunder', 'and', 'lightning', '.', 'enter', 'three', 'witches', '.', '1', '.', 'when', 'shall', 'we', 'three', 'meet', 'againe', '?', 'in', 'thunder', ',', 'lightning', ',', 'or', 'in', 'raine', '?', '2', '.', 'when', 'the', 'hurley-burley', \"'s\", 'done', ',', 'when', 'the', 'battaile', \"'s\", 'lost', ',', 'and', 'wonne', '3', '.', 'that', 'will', 'be', 'ere', 'the', 'set', 'of', 'sunne', '1', '.', 'where', 'the', 'place', '?', '2', '.', 'vpon', 'the', 'heath', '3', '.', 'there', 'to', 'meet', 'with', 'macbeth', '1', '.', 'i', 'come', ',', 'gray-malkin', 'all', '.', 'padock', 'calls', 'anon', ':', 'faire', 'is']\n"
+     ]
+    }
+   ],
    "source": [
-    "macbeth_tokens = None"
+    "macbeth_tokens = [token.lower() for token in macbeth_tokens_raw]\n",
+    "print(macbeth_tokens[:100])"
    ]
   },
   {
@@ -142,11 +304,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(',', 1962),\n",
+       " ('.', 1219),\n",
+       " ('the', 649),\n",
+       " ('and', 545),\n",
+       " (':', 477),\n",
+       " ('to', 383),\n",
+       " ('of', 338),\n",
+       " ('i', 331),\n",
+       " ('?', 241),\n",
+       " ('a', 239),\n",
+       " ('that', 236),\n",
+       " ('is', 211),\n",
+       " ('you', 205),\n",
+       " ('my', 203),\n",
+       " ('in', 200),\n",
+       " (\"'d\", 192),\n",
+       " ('not', 185),\n",
+       " ('it', 161),\n",
+       " ('with', 153),\n",
+       " ('his', 146),\n",
+       " ('be', 137),\n",
+       " ('macb', 137),\n",
+       " (\"'s\", 128),\n",
+       " ('your', 126),\n",
+       " ('our', 123),\n",
+       " ('haue', 122),\n",
+       " ('but', 120),\n",
+       " ('what', 117),\n",
+       " ('me', 113),\n",
+       " ('he', 112),\n",
+       " ('for', 109),\n",
+       " ('this', 104),\n",
+       " ('all', 100),\n",
+       " ('so', 96),\n",
+       " ('him', 90),\n",
+       " ('as', 89),\n",
+       " ('thou', 87),\n",
+       " ('we', 83),\n",
+       " ('enter', 81),\n",
+       " ('which', 80),\n",
+       " (\"'\", 74),\n",
+       " ('are', 73),\n",
+       " ('will', 72),\n",
+       " ('they', 70),\n",
+       " ('shall', 68),\n",
+       " ('no', 67),\n",
+       " ('then', 63),\n",
+       " ('do', 63),\n",
+       " ('macbeth', 62),\n",
+       " ('their', 62)]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "macbeth_freqdist = None\n",
+    "macbeth_freqdist = FreqDist(macbeth_tokens)\n",
     "macbeth_freqdist.most_common(50)"
    ]
   },
@@ -170,15 +394,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to /home/stupendous-\n",
+      "[nltk_data]     inspector-1822/nltk_data...\n",
+      "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nltk.download('stopwords')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "stopwords_list = None\n",
-    "stopwords_list += None\n",
-    "stopwords_list += None\n",
+    "stopwords_list = stopwords.words('english')\n",
+    "stopwords_list += list(string.punctuation)\n",
+    "stopwords_list += ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9']\n",
     "\n",
-    "macbeth_words_stopped = None"
+    "macbeth_words_stopped = [word for word in macbeth_tokens if word not in stopwords_list]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['tragedie', 'macbeth', 'william', 'shakespeare', '1603', 'actus', 'primus', 'scoena', 'prima', 'thunder', 'lightning', 'enter', 'three', 'witches', 'shall', 'three', 'meet', 'againe', 'thunder', 'lightning', 'raine', 'hurley-burley', \"'s\", 'done', 'battaile', \"'s\", 'lost', 'wonne', 'ere', 'set', 'sunne', 'place', 'vpon', 'heath', 'meet', 'macbeth', 'come', 'gray-malkin', 'padock', 'calls', 'anon', 'faire', 'foule', 'foule', 'faire', 'houer', 'fogge', 'filthie', 'ayre', 'exeunt']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(macbeth_words_stopped[:50])"
    ]
   },
   {
@@ -192,11 +462,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 24,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(\"'d\", 192),\n",
+       " ('macb', 137),\n",
+       " (\"'s\", 128),\n",
+       " ('haue', 122),\n",
+       " ('thou', 87),\n",
+       " ('enter', 81),\n",
+       " ('shall', 68),\n",
+       " ('macbeth', 62),\n",
+       " ('thee', 61),\n",
+       " ('vpon', 59),\n",
+       " ('macd', 58),\n",
+       " ('yet', 57),\n",
+       " ('thy', 56),\n",
+       " ('vs', 56),\n",
+       " ('come', 54),\n",
+       " ('king', 53),\n",
+       " ('hath', 52),\n",
+       " ('rosse', 49),\n",
+       " ('good', 48),\n",
+       " ('lady', 48),\n",
+       " ('would', 47),\n",
+       " ('time', 46),\n",
+       " ('let', 42),\n",
+       " ('like', 40),\n",
+       " ('say', 39),\n",
+       " ('make', 39),\n",
+       " ('banquo', 39),\n",
+       " ('doe', 38),\n",
+       " ('lord', 38),\n",
+       " ('must', 36),\n",
+       " ('done', 35),\n",
+       " ('ile', 35),\n",
+       " ('feare', 35),\n",
+       " ('wife', 34),\n",
+       " ('man', 33),\n",
+       " ('well', 33),\n",
+       " ('know', 33),\n",
+       " ('selfe', 32),\n",
+       " ('one', 32),\n",
+       " (\"'t\", 32),\n",
+       " ('great', 31),\n",
+       " ('see', 31),\n",
+       " ('may', 31),\n",
+       " ('exeunt', 30),\n",
+       " ('speake', 29),\n",
+       " ('night', 29),\n",
+       " ('sir', 29),\n",
+       " ('lenox', 28),\n",
+       " ('mine', 26),\n",
+       " ('vp', 26)]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "macbeth_stopped_freqdist = None\n",
+    "macbeth_stopped_freqdist = FreqDist(macbeth_words_stopped)\n",
     "macbeth_stopped_freqdist.most_common(50)"
    ]
   },
@@ -219,10 +551,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3434"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(macbeth_stopped_freqdist)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -237,16 +582,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Word\t\t\tNormalized Frequency\n",
+      "'d \t\t\t\t 0.01868\n",
+      "macb \t\t\t\t 0.01333\n",
+      "'s \t\t\t\t 0.01245\n",
+      "haue \t\t\t\t 0.01187\n",
+      "thou \t\t\t\t 0.008464\n",
+      "enter \t\t\t\t 0.00788\n",
+      "shall \t\t\t\t 0.006615\n",
+      "macbeth \t\t\t\t 0.006032\n",
+      "thee \t\t\t\t 0.005934\n",
+      "vpon \t\t\t\t 0.00574\n",
+      "macd \t\t\t\t 0.005643\n",
+      "yet \t\t\t\t 0.005545\n",
+      "thy \t\t\t\t 0.005448\n",
+      "vs \t\t\t\t 0.005448\n",
+      "come \t\t\t\t 0.005253\n",
+      "king \t\t\t\t 0.005156\n",
+      "hath \t\t\t\t 0.005059\n",
+      "rosse \t\t\t\t 0.004767\n",
+      "good \t\t\t\t 0.00467\n",
+      "lady \t\t\t\t 0.00467\n",
+      "would \t\t\t\t 0.004572\n",
+      "time \t\t\t\t 0.004475\n",
+      "let \t\t\t\t 0.004086\n",
+      "like \t\t\t\t 0.003891\n",
+      "say \t\t\t\t 0.003794\n",
+      "make \t\t\t\t 0.003794\n",
+      "banquo \t\t\t\t 0.003794\n",
+      "doe \t\t\t\t 0.003697\n",
+      "lord \t\t\t\t 0.003697\n",
+      "must \t\t\t\t 0.003502\n",
+      "done \t\t\t\t 0.003405\n",
+      "ile \t\t\t\t 0.003405\n",
+      "feare \t\t\t\t 0.003405\n",
+      "wife \t\t\t\t 0.003308\n",
+      "man \t\t\t\t 0.00321\n",
+      "well \t\t\t\t 0.00321\n",
+      "know \t\t\t\t 0.00321\n",
+      "selfe \t\t\t\t 0.003113\n",
+      "one \t\t\t\t 0.003113\n",
+      "'t \t\t\t\t 0.003113\n",
+      "great \t\t\t\t 0.003016\n",
+      "see \t\t\t\t 0.003016\n",
+      "may \t\t\t\t 0.003016\n",
+      "exeunt \t\t\t\t 0.002919\n",
+      "speake \t\t\t\t 0.002821\n",
+      "night \t\t\t\t 0.002821\n",
+      "sir \t\t\t\t 0.002821\n",
+      "lenox \t\t\t\t 0.002724\n",
+      "mine \t\t\t\t 0.002529\n",
+      "vp \t\t\t\t 0.002529\n"
+     ]
+    }
+   ],
    "source": [
-    "total_word_count = None\n",
-    "macbeth_top_50 = None\n",
+    "total_word_count = sum(macbeth_stopped_freqdist.values())\n",
+    "macbeth_top_50 = macbeth_stopped_freqdist.most_common(50)\n",
     "print(\"Word\\t\\t\\tNormalized Frequency\")\n",
     "for word in macbeth_top_50:\n",
-    "    normalized_frequency = None\n",
-    "    print(\"{} \\t\\t\\t {:.4}\".format(None, None))"
+    "    normalized_frequency = word[1] / total_word_count\n",
+    "    print(\"{} \\t\\t\\t\\t {:.4}\".format(word[0], normalized_frequency))"
    ]
   },
   {
@@ -445,7 +848,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
